--- a/pages/wp7projects.html
+++ b/pages/wp7projects.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-            <a href="#"><h1>raynervaz.com</h1></a>
+            <a href="http://raynervaz.com"><h1>raynervaz.com</h1></a>
             <p>Hello there. Looking around?</p>
 
             <!-- The Big Guns -->
