--- a/pages/wp7projects.html
+++ b/pages/wp7projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rayner Vaz on the internet</title>
+    <title>My Windows Phone Apps</title>
     
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
