--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="Personal webpage of Rayner Vaz -curious computer engineer embarked on an incessant quest for knowledge. Find my apps, projects and other contact information here."
+    <meta name="description" content="Personal webpage of Rayner Vaz -curious computer engineer embarked on an incessant quest for knowledge. Find my apps, projects and other contact information here.">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
