--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="Personal webpage of Rayner Vaz -curious computer engineer embarked on an incessant quest for knowledge. Find my apps, projects and other contact information here.">
+    <meta name="Keywords" content="rayner, vaz, rayner vaz, computer engineer, mumbai, ray13z, programmer, personal website, website, homepage">
+    <meta name="robot" content="index,follow">
+    <meta name="author" content="Rayner Vaz">  
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
