--- a/pages/wp7projects.html
+++ b/pages/wp7projects.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="My Windows Phone 7 mobile apps. All apps are currently published in the Windows Phone Marketplace.">
+    <meta name="Keywords" content="rayner, vaz, rayner vaz, mobile, apps, projects, windows phone apps, wp7">
+    <meta name="robot" content="index,follow">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
