fixed Code Analyzer link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- The Big Guns -->
             
-            <p class="view"><a href="#">Code Evaluation and Testing Engine<small>My final year Mumbai University project</small></a></p>
+            <p class="view"><a href="http://codeanalyzer.in">Code Evaluation and Testing Engine<small>My final year Mumbai University project</small></a></p>
             <p class="view"><a href="pages/wp7projects.html">Windows Phone Apps<small>My first tryst with mobile</small></a></p>
 
 
