Pic and description updated

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
       <section>
 <!--        <h1>Let&rsquo;s Test Some Markup</h1>-->
           <img src="images/itsme.jpg" alt="This was supposed to be a pic of me" />
-          <p>I'm Ray. Currently coding my last semester away at <a href="http://vit.edu.in/">VIT</a>.  I'm <em>ray13z</em> on most services.</p>
-        
+          <p>Hi, I'm Ray - currently learning how to make a computer learn! I am studying <a href="http://www.cs.ox.ac.uk/">CS@Oxford</a>.  You could find me as <em>ray13z</em> on most services.</p>
+       
+	<p>Do say hi.</p> 
       </section>
       <footer>
         <p>This page is maintained by little elves on behalf of  <a href="http://github.com/ray13z">Ray</a></p>
