wp7projects updated

--- a/pages/wp7projects.html
+++ b/pages/wp7projects.html
@@ -48,9 +48,9 @@
         <h1>Windows Phone 7 Apps</h1>
         <hr/>
 
-        <h2><a href="http://www.windowsphone.com/en-us/store/app/earthquake-monitor/16f50862-45dc-4cb3-8aab-40ad046b8628">Earthquake Monitor</a></h2>
+        <!--h2><a href="http://www.windowsphone.com/en-us/store/app/earthquake-monitor/16f50862-45dc-4cb3-8aab-40ad046b8628">Earthquake Monitor</a></h2>
         <p>An RSS based app that keeps you up-to-date with the latest Earthquakes around the world.</p>
-        <hr/>
+        <hr/-->
 
         <h2><a href="http://www.windowsphone.com/en-us/store/app/guitartuner/f9d8238b-cdaf-49f4-88ba-cb4f60603e8d">Guitar Tuner</a></h2>
         <p>A simple wav based Guitar Tuner.</p>
