Removed line - find on services

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <section>
 <!--        <h1>Let&rsquo;s Test Some Markup</h1>-->
           <img src="images/itsme.jpg" alt="This was supposed to be a pic of me" />
-          <p>Hi, I'm Ray - currently learning how to make a computer learn! I am studying <a href="http://www.cs.ox.ac.uk/">CS@Oxford</a>.  You could find me as <em>ray13z</em> on most services.</p>
+          <p>Hi, I'm Ray - currently learning how to make a computer learn! I am studying <a href="http://www.cs.ox.ac.uk/">CS@Oxford</a>. 
        
 	<p>Do say hi.</p> 
       </section>
